# client-server-model

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  HACKING.md  Makefile  README.md  callback.h  client.cc  client_message.pb.cc  client_message.pb.h  default.nix  server.cc  server_thread.h
.github/workflows/: ci.yml
scripts/: message_hdr.py
source/: callback.h  client.cc  client.cpp  client_2.cpp  client_message.proto  client_thread.h  client_thread_2.h  hostip.cpp  kv_store.h  server.cc  server.cpp  server2.cpp  server_thread.cpp  server_thread.h  server_thread2.cpp  server_thread2.h  shared.cpp  shared.h
source/workload_traces/: generate_traces.cpp  generate_traces.h
test/: CMakeLists.txt
test/source/: clt-svr-model_test.cpp  small-test.py
